force-app/main/default/objects/Sales_Custom_Metadata__mdt/Sales_Custom_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>Sales Custom Metadata</label>
    <pluralLabel>Sales Custom Metadata</pluralLabel>
</CustomObject>