force-app/main/default/objects/Sales_Custom_Metadata__mdt/fields/Full_Lead_Recordtype_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_Lead_Recordtype_ID__c</fullName>
    <description>Full Lead Recordtype ID</description>
    <label>Full Lead Recordtype ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>