force-app/main/default/objects/Sales_Custom_Metadata__mdt/fields/Quick_Lead_Recordtype_ID__c.field-meta.xml
<CustomField>
    <fullName>Quick_Lead_Recordtype_ID__c</fullName>
    <description>Quick Lead Recordtype ID</description>
    <label>Quick Lead Recordtype ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>