force-app/main/default/objects/Sales_Custom_Metadata__mdt/fields/SalesChatCaseRecordtypeID__c.field-meta.xml
<CustomField>
    <fullName>SalesChatCaseRecordtypeID__c</fullName>
    <description>Sales Chat Case Recordtype ID</description>
    <label>Sales Chat Case RecordtypeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>