force-app/main/default/objects/Sales_Custom_Metadata__mdt/fields/SalesqueueID__c.field-meta.xml
<CustomField>
    <fullName>SalesqueueID__c</fullName>
    <description>ID for Sales Chat Queue</description>
    <label>SalesqueueID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>